fix: Java 11 버전에 따른 toList() -> Collections.toList()